--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -103,12 +103,25 @@ h2 {
   margin-left: 40px;
 }
 
+.cube-section {
+  width: 40%;
+  display: flex;
+  justify-content: center;
+}
+
 .main-desc {
   height: 80%;
-  padding-top: 10%;
+  padding-top: 5%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+.desc-section {
+  margin-left: 50px;
+  width: 60%;
+}
+
+.desc-section h2 {
+  text-align: start;
 }
 
 .btn-main-desc {
@@ -222,7 +235,7 @@ h2 {
   background: #ececec;
 }
 
-.btn-watch a:link, 
+.btn-watch a:link,
 .btn-watch a:visited {
   text-decoration: none;
   color: #000;
@@ -257,3 +270,212 @@ h2 {
   color: #dedee6;
   cursor: pointer;
 }
+
+/* --------------   cube code    ----------------*/
+
+.cube {
+  transform: rotateX(-30deg) rotateY(0) translateZ(0);
+  transform-origin: 50px 50px -50px;
+  transform-style: preserve-3d;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  animation: rotate 8000ms linear infinite;
+}
+.cube div {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100px;
+  height: 100px;
+  background: #d3d3d3;
+  opacity: 0.75;
+}
+.cube div:nth-child(1) {
+  background: #f9f9f9;
+  transform-origin: center top;
+  transform: rotateX(90deg) translateY(-100px);
+  animation: top-init 4000ms ease-in-out 2,
+    top 4000ms ease-in-out 8000ms infinite;
+}
+.cube div:nth-child(2) {
+  background: #f5f5dc;
+  transform-origin: center bottom;
+  transform: rotateX(-90deg) translateY(100px);
+  animation: bottom-init 4000ms ease-in-out 4,
+    bottom 4000ms ease-in-out 8000ms infinite;
+}
+.cube div:nth-child(3) {
+  background: #228b22;
+  transform-origin: left center;
+  transform: rotateY(-90deg) translateX(-100px);
+  animation: left-init 4000ms ease-in-out 4,
+    left 4000ms ease-in-out 8000ms infinite;
+}
+.cube div:nth-child(4) {
+  background: #8cc07f;
+  transform-origin: right center;
+  transform: rotateY(90deg) translateX(100px);
+  animation: right-init 4000ms ease-in-out 4,
+    right 4000ms ease-in-out 8000ms infinite;
+}
+.cube div:nth-child(5) {
+  background: #93d36d;
+  transform-origin: center center;
+  transform: rotateX(0);
+  animation: front-init 4000ms ease-in-out 4,
+    front 4000ms ease-in-out 8000ms infinite;
+}
+.cube div:nth-child(6) {
+  background: #d3d3d3;
+  transform-origin: center center;
+  transform: rotateY(180deg) translateZ(100px);
+  animation: back-init 4000ms ease-in-out 4,
+    back 4000ms ease-in-out 8000ms infinite;
+}
+@keyframes rotate {
+  0% {
+    transform: rotateX(0) rotateY(0) rotateZ(0) translateZ(0);
+  }
+  100% {
+    transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg) translateZ(0);
+  }
+}
+@keyframes top {
+  0% {
+    transform: rotateX(90deg) translateY(-100px) translateZ(0);
+  }
+  50% {
+    transform: rotateX(90deg) translateY(-100px) translateZ(100px);
+  }
+  100% {
+    transform: rotateX(90deg) translateY(-100px) translateZ(0);
+  }
+}
+@keyframes top-init {
+  0% {
+    transform: rotateX(90deg) translateY(-100px) translateZ(0);
+  }
+  50% {
+    transform: rotateX(90deg) translateY(-100px) translateZ(50px);
+  }
+  100% {
+    transform: rotateX(90deg) translateY(-100px) translateZ(0);
+  }
+}
+@keyframes bottom {
+  0% {
+    transform: rotateX(-90deg) translateY(100px) translateZ(0);
+  }
+  50% {
+    transform: rotateX(-90deg) translateY(100px) translateZ(100px);
+  }
+  100% {
+    transform: rotateX(-90deg) translateY(100px) translateZ(0);
+  }
+}
+@keyframes bottom-init {
+  0% {
+    transform: rotateX(-90deg) translateY(100px) translateZ(0);
+  }
+  50% {
+    transform: rotateX(-90deg) translateY(100px) translateZ(50px);
+  }
+  100% {
+    transform: rotateX(-90deg) translateY(100px) translateZ(0);
+  }
+}
+@keyframes left {
+  0% {
+    transform: rotateY(-90deg) translateX(-100px) scaleY(1);
+  }
+  50% {
+    transform: rotateY(-90deg) translateX(-100px) scaleY(3);
+  }
+  100% {
+    transform: rotateY(-90deg) translateX(-100px) scaleY(1);
+  }
+}
+@keyframes left-init {
+  0% {
+    transform: rotateY(-90deg) translateX(-100px) translateZ(0);
+  }
+  50% {
+    transform: rotateY(-90deg) translateX(-100px) translateZ(50px);
+  }
+  100% {
+    transform: rotateY(-90deg) translateX(-100px) translateZ(0);
+  }
+}
+@keyframes right {
+  0% {
+    transform: rotateY(90deg) translateX(100px) scaleY(1);
+  }
+  50% {
+    transform: rotateY(90deg) translateX(100px) scaleY(3);
+  }
+  100% {
+    transform: rotateY(90deg) translateX(100px) scaleY(1);
+  }
+}
+@keyframes right-init {
+  0% {
+    transform: rotateY(90deg) translateX(100px) translateZ(0);
+  }
+  50% {
+    transform: rotateY(90deg) translateX(100px) translateZ(50px);
+  }
+  100% {
+    transform: rotateY(90deg) translateX(100px) translateZ(0);
+  }
+}
+@keyframes front {
+  0% {
+    transform: rotateX(0) scaleY(1);
+  }
+  50% {
+    transform: rotateX(0) scaleY(3);
+  }
+  100% {
+    transform: rotateX(0) scaleY(1);
+  }
+}
+@keyframes front-init {
+  0% {
+    transform: rotateX(0) translateZ(0);
+  }
+  50% {
+    transform: rotateX(0) translateZ(50px);
+  }
+  100% {
+    transform: rotateX(0) translateZ(0);
+  }
+}
+@keyframes back {
+  0% {
+    transform: rotateY(180deg) translateZ(100px) scaleY(1);
+  }
+  50% {
+    transform: rotateY(180deg) translateZ(100px) scaleY(3);
+  }
+  100% {
+    transform: rotateY(180deg) translateZ(100px) scaleY(1);
+  }
+}
+@keyframes back-init {
+  0% {
+    transform: rotateY(180deg) translateZ(100px) translateZ(0);
+  }
+  50% {
+    transform: rotateY(180deg) translateZ(100px) translateZ(50px);
+  }
+  100% {
+    transform: rotateY(180deg) translateZ(100px) translateZ(0);
+  }
+}
+
+/* --------------   cube code ends  ----------------*/
